// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typed section profile api client integration batch creates section profiles and snapshots get responses 1`] = `
{
  "area": {
    "unit": "SquareMeter",
    "value": 7.65,
  },
  "discriminator": "STANDARD",
  "id": "<db-id>",
  "name": "W12x26",
  "revisionId": "<revision-id>",
  "strongAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 34,
  },
  "strongAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 204,
  },
  "strongAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 38.4,
  },
  "torsionalConstant": {
    "unit": "MeterToTheFourth",
    "value": 0.346,
  },
  "warpingConstant": {
    "unit": "MeterToTheSixth",
    "value": 337,
  },
  "weakAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 5.77,
  },
  "weakAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 17.3,
  },
  "weakAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 8.94,
  },
}
`;

exports[`typed section profile api client integration batch creates section profiles and snapshots get responses 2`] = `
{
  "area": {
    "unit": "SquareMeter",
    "value": 33.4,
  },
  "discriminator": "WITH_SHEAR_AREAS",
  "id": "<db-id>",
  "name": "IPE 200",
  "revisionId": "<revision-id>",
  "strongAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 194,
  },
  "strongAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 1940,
  },
  "strongAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 220,
  },
  "strongAxisShearArea": {
    "unit": "SquareMeter",
    "value": 19.8,
  },
  "torsionalConstant": {
    "unit": "MeterToTheFourth",
    "value": 14,
  },
  "warpingConstant": {
    "unit": "MeterToTheSixth",
    "value": 11700,
  },
  "weakAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 28.5,
  },
  "weakAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 142,
  },
  "weakAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 44.6,
  },
  "weakAxisShearArea": {
    "unit": "SquareMeter",
    "value": 13.2,
  },
}
`;
